--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # ============================================================================
 
 # Dependencies
-#node_modules/
-#npm-debug.log*
+node_modules/
+npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
